--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -14,7 +14,7 @@
             <nav>
                 <ul>
                     <li><a href="{% url 'base' %}">Accueil</a></li>
-                    <li><a href="{% url 'formulaire' %}">Créer des Joueurs</a></li>
+                    <li><a href="{% url 'modif_joueur' %}">Créer des Joueurs</a></li>
                     <li><a href="{%url 'post_list'%}">Répartition Joueurs</a></li>
                 
 
