--- a/blog/templates/blog/modifier_joueur.html
+++ b/blog/templates/blog/modifier_joueur.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
     <h2>Modifier le joueur {{ joueur.nom }}</h2>
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Enregistrer les modifications</button>
