--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -25,7 +25,7 @@
                 <p> Remplacants :</p>
 
                 <table>
-                {% for j in joueurs|slice:"6:9" %}
+                {% for j in joueurs|slice:"6:" %}
                 <tr> 
                     <td>{{ j.nom }}</td>
                     <td>{{j.numero}}</td>
